# hangman_game

./: .gitignore  .pre-commit-config.yaml  Makefile.bat  pyproject.toml
.github/workflows/: ci.yml
hangman_game/: automated_hangman_country.py  automated_hangman_movie.py  automated_hangman_state_of_brazil.py  hangman.py  hangman_by_user.py
hangman_game/models/: __init__.py
hangman_game/models/api/: __init__.py  api.py  ibge_api.py  movie_api.py
hangman_game/models/hangman/: __init__.py  automated_hangman.py  hangman.py
hangman_game/models/utils/: __init__.py  location.py  movie.py
tests/: test_hangman_game.py
tests/unit/: test_api.py  test_ibge_api.py  test_location.py  test_movie.py  test_movie_api.py
