[tool.poetry]
name = "hangman_game"
version = "0.1.0"
description = ""
authors = ["Erika Assis <erika.s.assis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
urlpath = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.10.0"
autoflake = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
